Version 5.3.0
- Added SimpleSerial object for P1/P2 compatibility
- Added _lockrel() function for C
- Added header file with smartpin definitions (not strictly necessary in flexspin, but useful for compatibility with other compilers and Visual Studio)
- Allowed pin -1 to mean "no pin" in SmartSerial
- Changed the trivial Spin stub in P1 code to be compatible with openspin
  (this allows flexspin to be used to make the PropLoader fastloader)
- Changed handling of ? operator in Spin2 to be compatible with PNut
- Extended DEBUG() capability to include some backtick features
- Fixed argv[0] handling in the command line tools
- Fixed use of FCACHE in inline assembly in LUT and COG functions
- Fixed BASIC input when 127 (DEL) is read (Unix terminals use this for backspace)
- Fixed a problem with parsing floating point numbers with 32 bit compilers
- Fixed use of instructions as operators in DAT section
- Fixed parsing of large floating point numbers
- Ignored DEBUG statements completely unless -g is given
- Really fixed RECV return value
- Even in -O0, remove unused functions in C subclasses (avoids problems with duplicate symbols in stdio)

Version 5.2.0
- Added GET as keyword to BASIC
- Added GET and PUT binary I/O to BASIC
- Added _vfs_open_sdcardx() to allow explicit setting of pins for SD card
- Added new option -Wmax-errors=N to allow more errors to be printed in a run
- Added new option -Wabs-paths to print absolute paths in error messages
- Changed Spin2 member variables to be layed out in the order declared
- Fixed QCOS, QSIN
- Fixed a crash with negative ending values in repeat
- Fixed a problem with SEND(func(...)) in Spin2
- Fixed a problem with initializing two dimensional C arrays with strings
- Modified P2 serial receive to use @evanh's suggestion of 28 bit aqsync receive (so it is effectively 3 characters at a time)

Version 5.1.1
- Added QCOS and QSIN to Spin2
- Added _execve() and CHAIN functions to chain programs